관리자모드 새창 띄우기

--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -90,7 +90,7 @@
                 <ul class="sub_menu">
                      <div id="logout" >
                          {% if request.session.runcoding > 10 %}
-                         <a href="/deposit_list/">
+                         <a href="/deposit_list/" target="_blank">
                             <li style="border-bottom:1px solid #dcdcdc;">
                                 관리자모드
                             </li>
