나의 강의실 문구 변경

--- a/main/templates/myclass/myclass.html
+++ b/main/templates/myclass/myclass.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="/myclass_list/" class="btn list_more">목록으로</a>
+                <a href="/myclass_list/" class="btn list_more">나의강의실</a>
             </div>
             <div class="filter_area detail">
                 <div class="fixedArea">
