--- a/main/templates/myclass/myclass_list.html
+++ b/main/templates/myclass/myclass_list.html
@@ -31,7 +31,7 @@
             <ul class="thumb_list">
                  {% for list_detail in myclass_list_detail %}
                 <li>
-                    <img src={{list_detail.prd.prd_detail_img}} alt="코딩 라운지 리스트 썸네일">
+                    <img src={{list_detail.prd.prd_list_img}} alt="코딩 라운지 리스트 썸네일">
                     <div class="text_area">
                         <span class="title">{{list_detail.item_code}}({{list_detail.prd.keyword}})</span>
                             {% if list_detail.play == 'D'%}
