--- a/main/templates/lounge/coding_lounge.html
+++ b/main/templates/lounge/coding_lounge.html
@@ -37,6 +37,7 @@
                     <img src="/static/resource/img/lounge/{{loungeList.data_name}}/{{loungeList.img}}" alt="코딩 라운지 리스트 썸네일" style="width:400px; height:200px;">
                 </a>
                 <div class="text_area">
+                    <span class="search">{{loungeList.search_title}}</span>
                     <span class="title">{{loungeList.title}}</span>
                     <p class="writer">Project by {{loungeList.user}}</p>
                 </div>
