--- a/main/templates/runAdmin/deposit_list.html
+++ b/main/templates/runAdmin/deposit_list.html
@@ -17,16 +17,16 @@
             </div>
         </div>
 
-        <div class="codingLounge_list" style="margin-left:300px;">
+        <div class="codingLounge_list">
             <div class="filter_area fixed">
-                <div class="search_area">
-                    <div class="input_area_lounge">
+                <div class="search_area" >
+                    <div class="input_area_admin">
                          <input type="date" name="start_date" id="start_date" value="{{start_date}}">
                     </div>
-                    <div class="input_area_lounge">
+                    <div class="input_area_admin">
                          <input type="date" name="end_date" id="end_date" value="{{end_date}}">
                     </div>
-                    <div class="input_area_lounge">
+                    <div class="input_area_admin">
                          <input type="text" name="search_box" id="search_box" value='{{search}}'  placeholder="아이디 or 주문번호">
                     </div>
                      <div class="btn_area">
@@ -36,9 +36,9 @@
             </div>
         </div>
 
-        <div style="margin-left: 300px; width: 1128px; font-size: 20px !important;">total : {{total_count}}</div>
+        <div style="width: 1120px; font-size: 20px !important;">total : {{total_count}}</div>
         <div style="overflow: hidden; position: relative; border: 0px; width: 100%; " >
-            <table style="margin-left: 300px; width: 1128px;">
+            <table style="width:100%">
                 <thread>
                     <tr class="row">
                         <th class="admin_list">이름</th>
